[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["PySide6TK"]

[project]
name = "PySide6TK"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A collection of PySide6 helpers and style-sheets"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "PySide"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = ['importlib-metadata; python_version<"3.10"', "PySide6"]
version = "1.6.0"

[project.urls]
Homepage = "https://github.com/nate-maxwell/PySide6TK"
Source = "https://github.com/nate-maxwell/PySide6TK"
