[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["PySide6TK*"]

[tool.setuptools.package-data]
"PySide6TK" = ["resources/stylesheets/*.qss", "resources/icons/*.png"]

[project]
name = "PySide6TK"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A collection of PySide6 helpers and style-sheets"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "PySide"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = ['importlib-metadata; python_version<"3.10"', "PySide6"]
version = "2.1.1"

[project.urls]
Homepage = "https://github.com/nate-maxwell/PySide6TK"
Source = "https://github.com/nate-maxwell/PySide6TK"
